kubernetes/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway
  namespace: production-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
      - name: api-gateway
        image: nishayaduvanshi/api-gateway:2.1
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 3000
