kubernetes/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service
  namespace: production-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
      - name: order-service
        image: nishayaduvanshi/order-service:1.0
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 3003
