kubernetes/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service
  namespace: production-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
      - name: product-service
        image: nishayaduvanshi/product-service:1.0
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 3002
