kubernetes/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service
  namespace: production-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service
          image: nishayaduvanshi/user-service:1.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3001
