kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: production-platform

spec:
  selector:
    app: frontend

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: NodePort
