kubernetes/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service
  namespace: production-platform

spec:
  selector:
    app: product-service

  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002

  type: ClusterIP
