kubernetes/user-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-service
  namespace: production-platform

spec:
  selector:
    app: user-service

  ports:
    - port: 3001
      targetPort: 3001

  type: ClusterIP
